Rewrite media entry parsing + support downloading HDR images
Signed-off-by: iTaysonLab <9827543+iTaysonLab@users.noreply.github.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,9 @@
     <string name="media_prop_fps">Framerate</string>
     <string name="media_prop_duration">Duration (seconds)</string>
 
+    <string name="media_save_hdr">Download HDR version?</string>
+    <string name="media_save_hdr_text">This media file has also a HDR variation, saved into JXR format (JPEG-XR).\n\nHowever, this format might be not supported on your device.</string>
+
     <string name="media_cg_actions">Actions</string>
     <string name="media_cg_props">Properties</string>
 
